add log stream API, update logic to use SQS when synchroning record to open search when creating record
